# kiro-usage-dashboard

./: .gitignore  LICENSE  README.md
docs/: changelog.md  data-sources.md  design-rust-tauri.md  troubleshooting.md  upgrade-guide.md
kiro-core/: Cargo.toml
kiro-core/src/: history_store.rs  lib.rs  util.rs
kiro-core/src/scanner/: mod.rs  v1_sessions.rs  v2_turns.rs
prototype-python/: README.md  kiro_dashboard.cmd  kiro_dashboard.py  kiro_stats.py
prototype-python/static/: app.js  index.html  style.css
slint-app/: Cargo.toml  build.rs
slint-app/src/: main.rs
slint-app/ui/: app.slint
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  models.rs  quota_snapshot.rs
src-tauri/src/scanner/: quota_history.rs
ui/: app.js  index.html  style.css
