[package]
name = "kiro-usage-dashboard"
version = "0.1.0"
edition = "2021"
description = "Local dashboard for Kiro IDE usage statistics"
authors = ["hehuaiyu <1192689749@qq.com>"]
license = "MIT"
repository = "https://github.com/hehuaiyu/kiro-usage-dashboard"

# 只做桌面 (bin)，不做 mobile lib
[[bin]]
name = "kiro-usage-dashboard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 共享后端数据层 (扫描/持久化/聚合)
kiro-core = { path = "../kiro-core" }

# Tauri v2 桌面运行时
tauri = { version = "2", features = [] }

# main.rs 自身仍需要: DataResponse 序列化返回给前端 / 时间戳 / 路径
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
dirs = "5"

# Release 体积/性能优化
[profile.release]
opt-level = "z"       # 优化体积
lto = true            # 链接期优化
codegen-units = 1
strip = true          # 去符号
panic = "abort"       # panic 不展开栈
